# agentguard

./: .gitignore  .pre-commit-hooks.yaml  AUDIT_REPORT_2026.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARATIVE_ANALYSIS.md  Dockerfile  LICENSE  PAPER_6173_FINDINGS.md  README.md  RELEASE_v0.8.3.md  ROADMAP.md  action.yml  aggregate_results.py  auto_verdict.py  benchmark_pipeline.py  benchmark_quick.py  blog_post_draft.md  bp_push.json  bp_tmp.json  check_pypi.py  check_stats.py  competitor_analysis.py  debug2.py  debug3.py  debug_fp.py  decisions.md  diagnose_lost_tps.py  extract_independent_sample.py  extract_review_candidates.py  extract_sources.py  final_verdict.py  find_our_ghsas.py  full_benchmark.py  full_review.py  hn_post.md  independent_full_pipeline.py  independent_validation.py  manual_verify.py  print_summary.py  (+22 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml  self-test.yml
agentguard/: __init__.py  __main__.py  auto_reporter.py  classifier.py  cli.py  false_positive_filter.py  mcp_server.py  models.py  precommit.py  reporter.py  scanner.py
agentguard/rules/: __init__.py  agent_collusion.py  agent_loop.py  chain_amplify.py  (+20 more)
test_output/: camel_auto_report.md  camel_report.md  camel_summary.json  independent_sample.json  independent_verdicts.json  manual_review_candidates.json  manual_review_data.json  manual_verdicts.json  manual_verdicts_final.json  qwen_agent_summary.json  report_qwen_agent.md
tests/: test_chain_amplify.py  test_collusion.py  test_cross_file.py  test_interprocedural.py  test_memory_class_confusion.py  test_memory_poison.py  test_mount_exposure.py  test_precommit.py  test_prompt_template.py  test_scanner.py  test_stegano.py  test_tool_trust.py
(+18 files in other folders)
