[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfx-agentguard"
version = "0.6.0"
description = "Autonomous security scanner for AI agents. Detects prompt injection, tool abuse, data exfiltration, and OWASP ASI Top 10 vulnerabilities."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Dockfix Labs", email = "security@dockfixlabs.dev"}]
keywords = ["ai-security", "agent-security", "owasp-asi", "prompt-injection", "mcp", "static-analysis", "llm-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
mcp = ["mcp>=0.9"]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/dockfixlabs/agentguard"
Documentation = "https://github.com/dockfixlabs/agentguard#readme"
Issues = "https://github.com/dockfixlabs/agentguard/issues"
"Security Policy" = "https://github.com/dockfixlabs/agentguard/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
